# Distributed-CC

./: CITATION.bib  CITATION.cff  CMakeLists.txt  MANIFEST.in  NOTICE  README.md  pyproject.toml  setup.py
.github/workflows/: ci.yml
distr_cc/: __init__.py  _c_rccsdt.py  _c_rccsdt_q.py  _c_rccsdtq.py  _lib.py  _mpi.py  _rccsdtq_core.py  _runtime.py  diis.py  distribute_t3.py  distribute_t4.py  rccsdt.py  rccsdt_q.py  rccsdtq.py
docs/: parameters.md
examples/: 00_rccsdt_q_water.py  01_rccsdtq_water.py  02_restart.py  README.md
examples/production/: README.md
src/: rccsdt.c  rccsdt_q.c  rccsdtq.c
tests/: test_rccsdt.py  test_rccsdt_q.py  test_rccsdtq.py
